--- a/source/_posts/红黑树算法、原理分析.md
+++ b/source/_posts/红黑树算法、原理分析.md
@@ -8,14 +8,14 @@ categories: 数据结构
 
 ### 红黑树
 
-Red-Black Tree，整体较平衡的二叉查找树，查找性能较高。
+Red-Black Tree，自平衡(整体较平衡)的二叉查找树，查找性能较高。
 
 五个重要特性：
 - 节点为红色或黑色
 - 根为黑色
 - 叶子（NIL节点）节点为黑色
-- 每个红色节点必须有两个黑色子节点（从每个叶子到跟的所有路径上不能有连续的两个红色节点）
-- 从任一节点到其每个叶子的所有简单路径都包含相同数目的黑色节点
+- 每个红色节点必须有两个黑色子节点（从每个叶子到根的所有路径上不能有连续的两个红色节点）
+- 从任一节点到其每个叶子（NIL节点）的所有简单路径都包含相同数目的黑色节点
 
 以上性质保证了红黑树具有：
 **从根到叶子的最长可能路径不多于最短可能路径的两倍**（因为红黑树中最短可能路径都是黑色节点，最长可能路径为红黑节点交替，而两者由于性质4具有相同数量的黑色节点） 
