--- a/source/_posts/操作系统相关内容.md
+++ b/source/_posts/操作系统相关内容.md
@@ -178,3 +178,27 @@ categories: 学习笔记
   - 缺点：很多时候无法预知一个进程所需的全部资源；同时，会降低资源利用率，降低系统的并发性；
 - 破坏非抢占条件：允许进程强行抢占被其它进程占有的资源。会降低系统性能；
 - 破坏循环等待条件：对所有资源统一编号，所有进程对资源的请求必须按照序号递增的顺序提出，即只有占有了编号较小的资源才能申请编号较大的资源。这样避免了占有大号资源的进程去申请小号资源。
+
+
+### Java线程状态
+
+- **新建状态（New）**：当线程对象创建时，即进入新建状态，如 `Thread t = new MyThread();`
+- **就绪/运行状态（Runnable）**：
+  - 当调用线程对象的start()方法，如`t.start()`时，线程进入就绪状态。处于就绪状态，只是说明此线程已经做好了准备，随时等待CPU调度执行，并不是执行了`t.start()`此线程就会运行；
+  - 当CPU开始调度处于就绪态的线程时，线程才真正执行，进入到运行态。（就绪态是进入到运行态的唯一入口，即线程若要进入运行态，首先必须要处于就绪态）；
+- **阻塞状态（Blocked）**：处于运行态的线程可因为某种原因，暂时放弃对CPU的使用权，停止执行，即进入阻塞状态，直到其进入到就绪态，才有机会再次被CPU调用进入运行态。线程在获取`synchronized`同步锁失败（锁被其他线程占用），会进入同步阻塞状态；
+  - 其他阻塞：通过调用线程的`sleep()`或`join()`或发出来I/O请求时，线程会进入到阻塞状态。当`sleep()`状态超时、`join()`等待线程终止或者超时、或者I/O处理完毕时，线程重新转入就绪状态；
+- **等待状态（Waiting）**：进入该状态表示当前线程需要等待其他线程做出一些特定的动作（通知或中断）；
+  - 当前线程运行时，其他线程调用`join()`方法时，当前线程进入等待状态；
+  - 当前线程对象调用`wait()`方法时，进入等待状态；
+  - 等待的线程被其他线程唤醒时，`notify()`和`notifyAll()`方法，进入就绪态；
+- **超时等待（Timed_Waiting）**：与Waiting不同，其可以在指定的时间自行返回就绪态；
+  - 调用静态方法，`Thread.sleep(long)`进入超时等待；
+  - 线程调用`wait(long)`方法
+  - 其他线程调用指定时间的`join(long)`方法
+  - **`sleep`和`yield`**：
+    - `sleep(long)`方法会**使线程转入超时等待状态**，时间到了之后才会转入就绪状态。而`yield()`方法不会将线程转入等待，而是强制线程进入就绪状态。
+    - 使用`sleep(long)`方法**需要处理异常**，而`yield()`不用。
+- **终止状态（Terminated）**：线程执行完成或因异常退出了`run()`方法，该线程终止。
+
+
