--- a/source/_posts/排序算法总结.md
+++ b/source/_posts/排序算法总结.md
@@ -583,3 +583,68 @@ public class RadixSort {
 空间复杂度O(n)
 
 时间复杂度O(n)
+
+### 十、桶排序
+
+桶排序就是把最大值和最小值之间的数进行瓜分，例如分成 10 个区间，10个区间对应10个桶，我们把各元素放到对应区间的桶中去，再对每个桶中的数进行排序，可以采用归并排序，也可以采用快速排序之类的。
+
+之后每个桶里面的数据就是有序的了，我们在进行合并汇总。
+
+![桶排序]( http://qiniu.zrbac.fun/%E6%A1%B6%E6%8E%92%E5%BA%8F.png )
+
+**代码**
+
+```java
+package sortalgorithms;
+
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+
+public class BucketSort {
+    public static void main(String[] args) {
+        int[] arr = {12, 13, 1, 9, 3, 0, 5, 2, 4, 7, 6, 8};
+        bucketSort(arr);
+        System.out.println(Arrays.toString(arr));
+    }
+
+    private static void bucketSort(int[] arr) {
+        int max = Integer.MIN_VALUE;
+        int min = Integer.MAX_VALUE;
+
+        for(int i=0; i<arr.length; i++) {
+            min = Math.min(arr[i], min);
+            max = Math.max(arr[i], max);
+        }
+
+        //初始化桶
+        int bucketSize = (max-min)/arr.length + 1;
+        ArrayList<ArrayList<Integer>> bucket = new ArrayList<>(bucketSize);
+        for(int i=0; i<bucketSize; i++)
+            bucket.add(new ArrayList<>());
+
+        //将每个元素放入桶中
+        for(int i=0; i<arr.length; i++) {
+            int num = (arr[i] - min)/arr.length;
+            bucket.get(num).add(arr[i]);
+        }
+
+        //每个桶中的元素排序
+        for(int i=0; i<bucketSize; i++)
+            Collections.sort(bucket.get(i));
+
+        //将排序好的数据合并汇总至原数组
+        int k = 0;
+        for(int i=0; i<bucketSize; i++) {
+            for(int num : bucket.get(i))
+                arr[k++] = min + num;
+        }
+    }
+}
+```
+
+**分析**
+
+空间复杂度O(n)
+
+时间复杂度O(n)
